--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Log in or Sing up.</title>
+    <title>Home Page</title>
      <link rel="icon" type="image/x-icon" href="images/NOVA.png">
 <style>
 <h1>Welcome To The Official Page Of Dizy-FF</h1>
