--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Dizy-FF Official</title>
+    <link rel="icon" type="image/x-icon" href="images/NOVA.png">
+<body>	
+<head>
+<h1 style='background-color'>Welcome To The Official FF Page Of Dizy</h1>
+    </html>
