--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Dizy-FF Official</title>
     <link rel="icon" type="image/x-icon" href="images/NOVA.png">
-<body>	
+<body style="background-color: red;>	
 <head>
-<h1 style='background-color'>Welcome To The Official FF Page Of Dizy</h1>
+<h1 style="background-color: black; color: white;">Welcome To The Official FF Page Of Dizy</h1>
+</body>
     </html>
